kubernetes_deployment/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: eriksf/biocontainers-tacc-web:0.6.0
        command: ["gunicorn"]
        args: ["--bind","0.0.0.0:5000","-w","2","manage:app"]
        ports:
        - name: web
          containerPort: 5000
